Fixes for V0.01 release

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@
 *.su
 *.idb
 *.pdb
+*.gdb*
+core
 
 # Kernel Module Compile Results
 *.mod*
@@ -50,3 +52,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+#
+# system image files
+#
+*.img
